--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>MANHATTAN</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="./style/footer.css">
+    <link rel="stylesheet" href="./style/home.css">
+    <link rel="stylesheet" href="./style/afisha.css">
 </head>
 <body>
     <script type="module" src="./script/index.js"></script>
