add: cooperation page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/footer.css">
     <link rel="stylesheet" href="./style/home.css">
     <link rel="stylesheet" href="./style/afisha.css">
+    <link rel="stylesheet" href="./style/cooperation.css">
 </head>
 <body>
     <script type="module" src="./script/index.js"></script>
