--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./style/home.css">
     <link rel="stylesheet" href="./style/afisha.css">
     <link rel="stylesheet" href="./style/cooperation.css">
+    <link rel="stylesheet" href="./style/gallery.css">
+    <link rel="stylesheet" href="./style/popup.css">
 </head>
 <body>
     <script type="module" src="./script/index.js"></script>
