add: news, adaptiv home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/cooperation.css">
     <link rel="stylesheet" href="./style/gallery.css">
     <link rel="stylesheet" href="./style/popup.css">
+    <link rel="stylesheet" href="./style/news.css">
 </head>
 <body>
     <script type="module" src="./script/index.js"></script>
