--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./style/gallery.css">
     <link rel="stylesheet" href="./style/popup.css">
     <link rel="stylesheet" href="./style/news.css">
+    <link rel="stylesheet" href="./style/menu.css">
 </head>
 <body>
     <script type="module" src="./script/index.js"></script>
